--- a/front-radio/package.json
+++ b/front-radio/package.json
@@ -13,18 +13,26 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.5",
+    "@mui/material": "^5.16.5",
+    "@mui/x-data-grid": "^7.11.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/react": "^16.0.0",
+    "@types/react-table": "^7.7.20",
     "firebase": "^10.12.4",
     "framer-motion": "^11.3.19",
+    "howler": "^2.2.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-redux": "^9.1.2"
+    "react-query": "^3.39.3",
+    "react-redux": "^9.1.2",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.8",
+    "@types/howler": "^2.2.11",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
