--- a/front-radio/package.json
+++ b/front-radio/package.json
@@ -28,7 +28,8 @@
     "react-icons": "^5.2.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "use-media": "^1.5.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.8",
