--- a/front-radio/package.json
+++ b/front-radio/package.json
@@ -25,9 +25,11 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
     "react-table": "^7.8.0",
     "use-media": "^1.5.0"
   },
